解决列表切片显示null问题
