# gvb_server/routers/images_router.go
@@ -9,6 +9,7 @@ import (
 func ImagesRouter(router *gin.RouterGroup) {
 	ImagesApi := api.ApiGroupApp.ImagesApi
 	router.GET("/images", ImagesApi.ImageListView)
+	router.GET("/image_names", ImagesApi.ImageNameListView)
 	router.POST("/images", ImagesApi.ImageUploadView)
 	router.DELETE("/images", ImagesApi.ImageRemoveView)
 	router.PUT("/images", ImagesApi.ImageUpdateView)
